tests/invalid/invalid-012.inox
Module Invalid012

Wrong() Integer :
    Return "abc"
;

Main() :
;
